--- a/src/components/sections/ByNumber.astro
+++ b/src/components/sections/ByNumber.astro
@@ -11,27 +11,27 @@ import Container from "../shared/Container.astro";
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          12+
+          300+
         </h2>
-        <p class="mt-2 text-heading-3">Created projects</p>
+        <p class="mt-2 text-heading-3">Выкупленных авто</p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          200+
+          20+
         </h2>
-        <p class="mt-2 text-heading-3">Projects</p>
+        <p class="mt-2 text-heading-3">Городов и населенных пунктов</p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          120
+          90
         </h2>
-        <p class="mt-2 text-heading-3">Happy Client</p>
+        <p class="mt-2 text-heading-3">Минут от звонка до получения денег</p>
       </div>
 
       <div class="text-center">
@@ -40,7 +40,7 @@ import Container from "../shared/Container.astro";
         >
           5+
         </h2>
-        <p class="mt-2 text-heading-3">Years</p>
+        <p class="mt-2 text-heading-3">Лет опыта</p>
       </div>
     </div>
   </Container>
