--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,13 @@ import CTA from '../components/sections/CTA.astro';
 import Brands from '../components/sections/Brands.astro';
 ---
 
-<Layout title="Welcome to AgenceX">
+<Layout title="Автовыкуп сибирь">
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
-		<Brands/>
+		<!--<Brands/>-->
 		<Services/>
-		<AboutUs/>
-		<Features/>
+		<!--<AboutUs/>-->
+		<!--<Features/>-->
 		<CTA/>
 	</main>
 </Layout>
