--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -110,6 +110,20 @@ const { title } = Astro.props;
       });
     }
   </script>
+  <script>
+    var _paq = window._paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="https://xn7sbeca1bbm8ampihr2jzaxnp1ai.matomo.cloud/";
+      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      _paq.push(['setSiteId', '1']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.async=true; g.src='https://cdn.matomo.cloud/xn7sbeca1bbm8ampihr2jzaxnp1ai.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+    })();
+  </script>
+
 </html>
 <style is:global>
   :root {
