--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -3,6 +3,8 @@ import BtnLink from "../shared/BtnLink.astro";
 import Container from "../shared/Container.astro";
 import  Navitem from "../shared/Navitem.astro";
 
+const PHONE_NUMBER = import.meta.env.PUBLIC_PHONE_NUMBER
+
 const navItems = [
     {
         href:"#",
@@ -28,7 +30,7 @@ const navItems = [
         <nav class="w-full flex justify-between gap-6 relative">
             <!-- logo -->
             <div class="min-w-max inline-flex relative">
-                <a href="tel:+79234150350" class="relative flex items-center gap-3">
+                <a href={`tel:+${PHONE_NUMBER}`} class="relative flex items-center gap-3">
                     <div class="relative w-7 h-7 overflow-hidden flex rounded-xl">
                         <span class="absolute w-4 h-4 -top-1 -right-1 bg-green-500 rounded-md rotate-45"></span>
                         <span class="absolute w-4 h-4 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"></span>
@@ -36,7 +38,7 @@ const navItems = [
                         <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
                     </div>
                     <div class="inline-flex text-lg font-semibold text-heading-1">
-                        8(923)415-03-50
+                        {PHONE_NUMBER.replace(/(\d{1})(\d{3})(\d{3})(\d{4})/g, `$1-$2-$3-$4`)}
                     </div>
                 </a>
             </div>
