--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -41,7 +41,7 @@ import Paragraph from "../shared/Paragraph.astro";
           class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight
           font-bold text-heading-1"
         >
-          Оставте звявку на  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">выкуп</span>  вышего автомобиля
+        Оставьте заявку на <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">выкуп</span> Вашего автомобиля
         </h1>
         <Paragraph className={"pt-10"}>
           Рассчитаем стоимость и перезвоним
