--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -21,7 +21,7 @@ import ByNumber from "./ByNumber.astro";
                 Срочный выкуп автомобилей до  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">100%</span> от рыночной стоимости!
             </h1>
             <Paragraph className="mt-8">
-                Оставте заявку на обратный звонок, наш специалист свяжется с вами в ближайшее время и ответит на любые вопросы
+                Оставьте заявку на обратный звонок. Наш специалист свяжется с вами в ближайшее время и ответит на любые вопросы
             </Paragraph>
             <div class="mt-10  w-full flex max-w-md mx-auto lg:mx-0">
                 <div class="flex sm:flex-row flex-col gap-5 w-full">
