--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import CTA from '../components/sections/CTA.astro';
 import Brands from '../components/sections/Brands.astro';
 ---
 
-<Layout title="Автовыкуп сибирь">
+<Layout title="Выкуп автомобилей в Новосибирске" description={'Автовыкуп сибирь - помощь в продаже автомобиля в городе Новосибирске'} />
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
 		<!--<Brands/>-->
