--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,6 +3,7 @@ import Button from "../shared/Button.astro";
 import Container from "../shared/Container.astro";
 import Paragraph from "../shared/Paragraph.astro";
 import ByNumber from "./ByNumber.astro";
+import InformationPopup from "../shared/InformationPopup.astro";
 
 ---
 
@@ -18,21 +19,21 @@ import ByNumber from "./ByNumber.astro";
             
             <h1 class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight xl:text-6xl/tight
              font-bold text-heading-1">
-                Срочный выкуп автомобилей до  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">100%</span> от рыночной стоимости!
+                Срочный выкуп автомобилей в Новосибирске до  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">100%</span> от рыночной стоимости!
             </h1>
             <Paragraph className="mt-8">
                 Оставьте заявку на обратный звонок. Наш специалист свяжется с вами в ближайшее время и ответит на любые вопросы
             </Paragraph>
             <div class="mt-10  w-full flex max-w-md mx-auto lg:mx-0">
                 <div class="flex sm:flex-row flex-col gap-5 w-full">
-                    <form action="#"  class="py-1 pl-6 w-full pr-1 flex gap-3 items-center text-heading-3 shadow-lg shadow-box-shadow
+                    <form action="#" id="topForm" class="py-1 pl-6 w-full pr-1 flex gap-3 items-center text-heading-3 shadow-lg shadow-box-shadow
                       border border-box-border bg-box-bg rounded-full ease-linear focus-within:bg-body  focus-within:border-primary">
                         <span class="min-w-max pr-2 border-r border-box-border">
                             <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none">
                                 <path d="M14.3308 15.9402L15.6608 14.6101C15.8655 14.403 16.1092 14.2384 16.3778 14.1262C16.6465 14.014 16.9347 13.9563 17.2258 13.9563C17.517 13.9563 17.8052 14.014 18.0739 14.1262C18.3425 14.2384 18.5862 14.403 18.7908 14.6101L20.3508 16.1702C20.5579 16.3748 20.7224 16.6183 20.8346 16.887C20.9468 17.1556 21.0046 17.444 21.0046 17.7351C21.0046 18.0263 20.9468 18.3146 20.8346 18.5833C20.7224 18.8519 20.5579 19.0954 20.3508 19.3L19.6408 20.02C19.1516 20.514 18.5189 20.841 17.8329 20.9541C17.1469 21.0672 16.4427 20.9609 15.8208 20.6501C10.4691 17.8952 6.11008 13.5396 3.35083 8.19019C3.03976 7.56761 2.93414 6.86242 3.04914 6.17603C3.16414 5.48963 3.49384 4.85731 3.99085 4.37012L4.70081 3.65015C5.11674 3.23673 5.67937 3.00464 6.26581 3.00464C6.85225 3.00464 7.41488 3.23673 7.83081 3.65015L9.40082 5.22021C9.81424 5.63615 10.0463 6.19871 10.0463 6.78516C10.0463 7.3716 9.81424 7.93416 9.40082 8.3501L8.0708 9.68018C8.95021 10.8697 9.91617 11.9926 10.9608 13.04C11.9994 14.0804 13.116 15.04 14.3008 15.9102L14.3308 15.9402Z" stroke="currentColor" class="w-5 h-5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </span>
-                        <input type="number" name="" id="" placeholder="Номер телефона" class="w-full py-3 outline-none bg-transparent">
+                        <input type="number" name="" id="TopPhoneNumber" placeholder="Номер телефона" class="w-full py-3 outline-none bg-transparent">
                         <Button variant={"primary"} className={"min-w-max text-white"}>
                             <span class="hidden sm:flex relative z-[5]">
                                 Отправить
@@ -54,4 +55,28 @@ import ByNumber from "./ByNumber.astro";
     </Container>
 
     <ByNumber/>
+    <div class="hidden" id="popupBlock">
+        <InformationPopup header="Ваша заявка принята" information="Ожидате звонка нашего оператора" />
+    </div>
 </section>
+
+<script>
+    //@ts-nocheck
+    const TopPhoneNumber = document.getElementById('TopPhoneNumber')
+    const topForm = document.getElementById('topForm')
+    const popupBlock = document.getElementById('popupBlock')
+    const showPopup = () => {
+        popupBlock.style.display = 'flex'
+        setTimeout(() => { popupBlock.style.display = 'none' }, 2000)
+    }
+
+    const api = () => `https://api.telegram.org/bot6423420288:AAFRHw2xBXexwfdKxcJq3fooc5EnQ3J1T7c/sendMessage?chat_id=-1001997786688&text=*заявка на обратный звонок*  %0A%0A Номер телефона: [${TopPhoneNumber.value}](tel:${TopPhoneNumber.value}) &parse_mode=Markdown`
+
+    topForm.addEventListener('submit', (e) => {
+        e.preventDefault()
+        fetch(api(), {mode: 'no-cors'}).then(()=>{
+            TopPhoneNumber.value = ''
+            showPopup()
+        }).catch(e => console.log(e))
+    })
+</script>
